[build-system]
requires = ["setuptools>=61.0",
            "platformdirs>=2.5.2",
            "PyYAML>=6.0",
            ]
build-backend = "setuptools.build_meta"

[project]
name = "config_builder_daw30410"
version = "0.0.1"
authors = [
  { name="David Willcox", email="daw30410@yahoo.com" },
]
description = "Build an application configuration from multiple files"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
                "platformdirs>=2.5.2",
                "PyYAML>=6.0",
]

[project.urls]
#"Homepage" = "https://github.com/pypa/mail_sender"
#"Bug Tracker" = "https://github.com/pypa/mail_sender/issues"
#Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"