[build-system]
requires = ["setuptools>=61.0",
            "platformdirs>=2.5.2",
            "PyYAML>=6.0",
            ]
build-backend = "setuptools.build_meta"

[project]
name = "config_builder"
version = "1.0.1"
authors = [
  { name="David Willcox", email="daw30410@yahoo.com" },
]
description = "Build an application configuration from multiple files"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
                "platformdirs>=2.5.2",
                "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/dawillcox/python_config_builder"
"Bug Tracker" = "https://github.com/dawillcox/python_config_builder/issues"
Documentation = "https://github.com/dawillcox/python_config_builder/blob/main/README.md"
Repository = "https://github.com/me/dawillcox/python_config_builder.git"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

